# octetos-physical

./: .gitignore  Makefile.am  configure.ac
src/: Atom-Bohr.cc  Atom-Bohr.hh  Atom.cc  Atom.hh  Makefile.am  Particle.cc  Particle.hh  develop.cc  octetos-physical.pc.in
tests/: Makefile.am  v0.cc
