

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

lib_LTLIBRARIES = liboctetos-physical.la


liboctetos_physical_la_CXXFLAGS = 
liboctetos_physical_la_LIBADD =  
liboctetos_physical_la_SOURCES = Atom.cc Atom-Bohr.cc gen/names.cc gen/symbols.cc gen/radio.cc


